--- a/index.html
+++ b/index.html
@@ -1,10 +1,63 @@
 <!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Stranger Lights</title>
+  <meta name="description" content="A halloween IoT project. Contact the upside-down.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+	<!--   Use HTTPS -->
+  <link rel="canonical" href="https://www.strangerlights.com/"/>
+  <script>
+	  if(window.location.host == "strangerlights.com") {
+		  var host = "strangerlights.com";
+			if ((host == window.location.host) && (window.location.protocol != "https:")) {
+				window.location.protocol = "https";
+			}
+	  }else{
+		  var host = "www.strangerlights.com";
+			if ((host == window.location.host) && (window.location.protocol != "https:")) {
+				window.location.protocol = "https";
+			}
+		}
+	</script>
+ 
+<!--   <link rel="icon" href="favicon@1x.png" type="image/png" sizes="16x16"> -->
+<!--   <link rel="icon" href="favicon@2x.png" type="image/png" sizes="128x128"> -->
+<!--   <link rel="icon" href="favicon@4x.png" type="image/png" sizes="512x512"> -->
+  
+  <link rel="stylesheet" href="style.css"/>
+  
+	<!-- 	GA tag -->
+	
+	<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  
+    ga('create', 'UA-67825496-7', 'auto');
+    ga('send', 'pageview');
+  
+  </script>
+	
+	<!-- 	SEO -->
 
+	<meta itemprop="name" content="Stranger Lights">
+	<meta itemprop="description" content="A halloween IoT project. Contact the upside-down.">
+	<meta itemprop="image" content="https://www.strangerlights.com/img/SLTitle.jpg">
+	
+	<meta property="og:url" content="https://www.strangerlights.com/">
+	<meta property="og:title" content="Stranger Lights - Contact the upside-down">
+	<meta property="og:image" content="https://www.strangerlights.com/img/SLTitle.jpg">
+	<meta property="og:description" content="A halloween IoT project. Contact the upside-down.">
+	<meta property="og:site_name" content="Stranger Lights">
+	<meta property="og:locale" content="en_US">
+	
+</head>
 <body style="background-color:black; color:white;">
-
-<h3>You stare into the void. You feel something looking back.</h3>
-<h4>You decide to return later </h3>
-
+  
+  
+  
 </body>
-
 </html>
