Title screen ready

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 	
 </head>
 <body style="background-color:black; color:white;">
-  
-  
+  <div class="anim-humming_1">
+    <img src="img/SLTitle.jpg" class="title-img anim-humming_2">
+  </div>
   
 </body>
 </html>
