Attempting style fixes

--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
   </div>
 
 <script src="script.js"></script>
-<p style="position: absolute; bottom: 0px; color: #494949;">Stranger Lights &trade; - Copyright Lucas Watson 2016
+<p style="position: relative; bottom: 0px; color: #494949;">Stranger Lights &trade; - Copyright Lucas Watson 2016
 </body>
 </html>
