--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       </label>
       <input type="submit" value="Submit">
     </form>
+    <p id="message-user-error-spaces" style="display:none">Please enter something! Only spaces in textbox.</p>
+    <p id="message-user-error-toolong" style="display:none">Sorry, 21 character limit</p>
+    <p id="message-user-error-naughty" style="display:none">No explicit words please</p>
     <br>
     <p>What others have said</p>
     <div>
