Feedback to user for rate limiting

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
   <div class="mainpage-content">
     
     <noscript>Hey there, please make sure Javascript is enabled, it's needed for this site to work</noscript>
-    <h2>Coming October 29th. Please ignore until then.</h2>
+    <h3>Stand in Marsh Plaza (at BU), and look across the street.</h3>
     <p>You're in the upside-down, on the other side. You need to get out. Send a message for help, it will be displayed in the living world.</p>
-    <p>The portal only lets through <strong>letters and spaces</strong></p>
+    <p>The portal only lets through <strong>letters and spaces</strong>.</p>
     <form name="contact-upsidedown-form" id="contact-upsidedown-form">
       <label>
         Message:
@@ -74,6 +74,7 @@
       </label>
       <input type="submit" value="Submit">
     </form>
+    <p id="message-user-error-limiter" style="display:none">Only enough energy for 2 messages per minute</p>
     <p id="message-user-error-spaces" style="display:none">Please enter something! Only spaces in textbox.</p>
     <p id="message-user-error-toolong" style="display:none">Sorry, 25 character limit</p>
     <p id="message-user-error-naughty" style="display:none">No explicit words please</p>
@@ -93,6 +94,6 @@
   </div>
 
 <script src="script.js"></script>
-<p style="position: relative; bottom: 0px; color: #494949;">Stranger Lights &trade; - Copyright Lucas Watson 2016
+<p style="position: relative; bottom: 0px; color: #494949;">Stranger Lights &trade; - Code Copyright Lucas Watson 2016
 </body>
 </html>
