Some more censor things

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <p id="message-user-error-limiter" style="display:none">Only enough energy for 2 messages per minute</p>
     <p id="message-user-error-spaces" style="display:none">Please enter something! Only spaces in textbox.</p>
     <p id="message-user-error-toolong" style="display:none">Sorry, 25 character limit</p>
-    <p id="message-user-error-naughty" style="display:none">No explicit words please</p>
+    <p id="message-user-error-naughty" style="display:none">No explicit words please. (Sorry if you didn't use one, it's over sensitive to be cautious).</p>
     <br>
     <p>What others have said</p>
     <div>
