Link to source added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <!-- Start Info, REMOVE -->
     <h3>Thank you!</h3>
     <p>Stranger Lights was an IoT project that ran from October 29th to November 4th. It allowed anyone to send a short message that got displayed on a alphabet board similar to that seen in popular Netflix show Stranger Things. The board was located on BU's campus, and received a lot of enthusiastic feedback.</p>
-    <p>If you'd like to see the source code or how this was built, both will be up soon.</p>
+    <p>Source code: https://github.com/lkwatson/strangerlights</p>
+    <p>Build log to come soon.</p>
     <!-- End info, REMOVE -->
     
     <noscript>Hey there, please make sure Javascript is enabled, it's needed for this site to work</noscript>
