--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
 	<!--   Use HTTPS -->
   <link rel="canonical" href="https://www.strangerlights.com/"/>
-  <!--   <script>
+  <script>
 	  if(window.location.host == "strangerlights.com") {
 		  var host = "strangerlights.com";
 			if ((host == window.location.host) && (window.location.protocol != "https:")) {
@@ -20,7 +20,7 @@
 				window.location.protocol = "https";
 			}
 		}
-	</script> -->
+	</script>
  
 <!--   <link rel="icon" href="favicon@1x.png" type="image/png" sizes="16x16"> -->
 <!--   <link rel="icon" href="favicon@2x.png" type="image/png" sizes="128x128"> -->
